--- a/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/control/panel.cshtml
@@ -73,8 +73,8 @@
                                         <td class="text-center">
                                             <a href="@Url.Action("listado", "titulares", new { area = "coadmin", id = item.id })"
                                                class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                               data-toggle="tooltip" data-placement="top" title="Comunidades">
-                                                <i class="mdi mdi-home"></i>
+                                               data-toggle="tooltip" data-placement="top" title="Titulares">
+                                                <i class="fa fa-users"></i>
                                             </a>
                                         </td>
                                         <td>
