--- a/WebApplication1/Views/control/community.cshtml
+++ b/WebApplication1/Views/control/community.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "community";
-    Page.Title = "Comunidad de control - Brokolee Software";
+    Page.Title = "Control de comunidades - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,12 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title"> Comunidad de control</h4>
+                            <h4 class="page-title">Panel de control</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
-                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Comunidad de control</a></li>
-                            <li class="breadcrumb-item active">Comunidad de control</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i>Panel de control</a></li>                          
                         </ul>
                     </div>
                 </div>
@@ -31,7 +30,7 @@
                 <div class="card m-b-30">
                     <div class="card-body">
                         <div class="input-group">
-                            <input type="text" id="search-input" name="example-input1-group2" class="form-control" placeholder="Buscar facilidades...">
+                            <input type="text" id="search-input" name="example-input1-group2" class="form-control" placeholder="Buscar comunidades...">
                             <span class="input-group-append">
                                 <button type="button" id="search-button" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar </button>
                             </span>
