--- a/WebApplication1/Views/cuotas/estado.cshtml
+++ b/WebApplication1/Views/cuotas/estado.cshtml
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Estado de Cuenta</h4>
+                            <h4 class="page-title">Estado de cuenta</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Estado de Cuenta</li>
+                            <li class="breadcrumb-item active">Estado de cuenta</li>
                         </ul>
                     </div>
                 </div>
@@ -43,11 +43,11 @@
                                     </span>
                                 </div>
                                 <div class="input-group col-md-6">
-                                    <label class="col-sm-6 col-md-4 col-form-label">Filtrar por Estado</label>
+                                    <label class="col-sm-6 col-md-4 col-form-label">Filtrar por estado</label>
                                     <div class="col-sm-6 col-md-8">
                                         <select class="form-control" name="searchState">
                                             <option value="">Elije un estado</option>
-                                            <option value="inprocess">En Proceso</option>
+                                            <option value="inprocess">En proceso</option>
                                             <option value="indicted">Procesado</option>
                                         </select>
                                     </div>
