--- a/WebApplication1/Views/eventos/registrado.cshtml
+++ b/WebApplication1/Views/eventos/registrado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "registrado";
-    Page.Title = "Ver Evento Registrado - Brokolee Software";
+    Page.Title = "Ver evento registrado - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Ver Evento Registrado</li>
+                            <li class="breadcrumb-item active">Ver evento registrado</li>
                         </ul>
                     </div>
                 </div>
