--- a/WebApplication1/Views/tareas/listado.cshtml
+++ b/WebApplication1/Views/tareas/listado.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de Tareas - Brokolee Software";
+    Page.Title = "Listado de tareas - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Listado de Tareas</li>
+                            <li class="breadcrumb-item active">Listado de tareas</li>
                         </ul>
                     </div>
                 </div>
@@ -65,8 +65,8 @@
                                         <th class="f-b">Nombre de tarea</th>
                                         <th class="f-b">Responsable</th>
                                         <th class="f-b">Fecha</th>
-                                        <th class="f-b">Fecha Estimada</th>
-                                        <th class="f-b">Status</th>
+                                        <th class="f-b">Fecha estimada</th>
+                                        <th class="f-b">Estado</th>
                                         <th class="text-center f-b">Ver</th>
                                     </tr>
                                 </thead>
