--- a/WebApplication1/Views/tareas/vertarea.cshtml
+++ b/WebApplication1/Views/tareas/vertarea.cshtml
@@ -41,7 +41,7 @@
                     <div class="card-body">
                         <div class="row form-material">
                             <div class="col-md-6 mb-1">
-                                <h5 class="d-inline-block">Servicio Plomería</h5>
+                                <h5 class="d-inline-block">@Model.viewTask.task_name</h5>
                             </div>
                             <div class="col-md-6">
 
