--- a/WebApplication1/Areas/coadmin/Views/facilidades/disponibles.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/disponibles.cshtml
@@ -58,7 +58,14 @@
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregar", "facilidades", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>
+                                @if (Session["CURRENT_COMU"] != null)
+                                {
+                                    <a href="@Url.Action("agregar", "facilidades", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>
+                                }
+                                else
+                                {
+                                    <a><button type="button" disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>
+                                }
                             </div>
                         </div>
 
