--- a/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
@@ -68,7 +68,15 @@
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregar", "tareas", new { area = "coadmin" })"><button type="button" class="btn btn-warning waves-effect waves-light float-xl-right float-lg-right float-md-left">Crear nueva tarea</button></a>
+                                @if (Session["CURRENT_COMU"] != null)
+                                {
+                                    <a href="@Url.Action("agregar", "tareas", new { area = "coadmin" })"><button type="button" class="btn btn-warning waves-effect waves-light float-xl-right float-lg-right float-md-left">Crear nueva tarea</button></a>
+                                }
+                                else
+                                {
+                                    <a><button type="button" disabled class="btn btn-warning waves-effect waves-light float-xl-right float-lg-right float-md-left">Crear nueva tarea</button></a>
+                                }
+
                             </div>
                         </div>
 
