--- a/WebApplication1/Areas/coadmin/Views/tareas/vertarea.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/vertarea.cshtml
@@ -40,26 +40,10 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="row form-material">
-                            <div class="col-md-6">
-                                <h5 class="d-inline-block">Servicio:</h5>
-                            </div>
                             <div class="col-md-6 mb-1">
-                                <button type="button" class="btn btn-success dropdown-toggle waves-effect waves-light float-xl-right float-lg-right float-md-left" data-toggle="dropdown" aria-expanded="false">Reasignar Tarea<span class="caret"></span> </button>
-                                <div class="dropdown-menu">
-                                    @foreach (var item in Model.titularList)
-                                    {
-
-
-                                        <a class="dropdown-item" href="#">@item.first_name1</a>
-
-                                    }
-                                    @*<a class="dropdown-item" href="#">Titular 3</a>
-        <a class="dropdown-item" href="#">Titular 4</a>*@
-                                </div>
-
-                                </div>
-                           
-                                </div>
+                                <h5 class="d-inline-block">@Model.viewTask.task_name</h5>
+                            </div>                                                       
+                        </div>
                         <div class="form-divider"></div>
                         <div class="row form-material">
                             <div class="col-sm-12">
