--- a/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/titulares/listado.cshtml
@@ -77,12 +77,31 @@
                                         </button>
                                     </a>
                                 }
-                                <button class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1"
-                                        type="button" id="import_csv_btn">
-                                    Importar
-                                </button>
+                                @if (Model.titularList.Count > 0)
+                                {
+                                    <button class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1"
+                                            type="button" id="import_csv_btn">
+                                        Importar
+                                    </button>
+                                }
+                                else
+                                {
+                                    <button disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1"
+                                            type="button" id="">
+                                        Importar
+                                    </button>
+                                }
 
-                                <a href="#" onclick="onExportCSV()"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">Exportar</button></a>
+                                @if (Session["CURRENT_COMU"] != null)
+                                {
+                                    <a href="#" onclick="onExportCSV()"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">Exportar</button></a>
+                                }
+                                else
+                                {
+                                    <a><button disabled type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">Exportar</button></a>
+                                }
+
+
                             </div>
                         </div>
                         <div class="table-responsive">
