--- a/WebApplication1/Areas/webmaster/Views/comunidades/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/listado.cshtml
@@ -104,7 +104,7 @@
                                                 <a href="#">
                                                     <button type="button" class="btn btn-danger waves-effect waves-light btn-sm mb-1" 
                                                             onclick="onDeleteCommunity(this)" data-id="@item.id"
-                                                            data-toggle="tooltip" data-placement="top" title="Eliminar-g">
+                                                            data-toggle="tooltip" data-placement="top" title="Eliminar">
                                                     <i class="mdi mdi-delete"></i></button>
                                                    
                                                 </a>
