--- a/WebApplication1/Views/cuotas/balance.cshtml
+++ b/WebApplication1/Views/cuotas/balance.cshtml
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Balance Pendiente</li>
+                            <li class="breadcrumb-item active">Balance pendiente</li>
                         </ul>
                     </div>
                 </div>
