--- a/WebApplication1/Views/tareas/sugerirtarea.cshtml
+++ b/WebApplication1/Views/tareas/sugerirtarea.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "sugerirtarea";
-    Page.Title = "Sugerir Tarea - Brokolee Software";
+    Page.Title = "Sugerir tarea - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -19,7 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control")" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Sugerir Tarea</li>
+                            <li class="breadcrumb-item active">Sugerir tarea</li>
                         </ul>
                     </div>
                 </div>
@@ -86,10 +86,10 @@
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-date-input" class="col-sm-3 col-form-label">Fecha</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="date" value="" required
+                                <div class="col-sm-9">                                   
+                                    <input class="form-control" type="date" required
                                            data-toggle="tooltip" title="Mes / día / año | Fecha de registro de la tarea"
-                                           id="example-date-input" name="start_date" />
+                                           value="" name="start_date" id="example-date-input-PA">
                                     <small class="form-text text-muted">Mes / día / año | Fecha de registro de la tarea</small>
                                 </div>
                             </div>
@@ -105,7 +105,7 @@
                             </div>
 
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit"  class="btn btn-primary waves-effect waves-light">Sugerir Tarea</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="@Url.Action("listado", "tareas")"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
