correccion en mensajes privados coadmin, correcciones en suplidores

--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -53,6 +53,10 @@
             color: #00ff00;
         }
 
+        .no-disp{
+            cursor: not-allowed!important;
+        }
+
         #txtMessage {
             background-color: lightgray;
         }
