--- a/WebApplication1/Areas/coadmin/Views/facilidades/disponibles.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/disponibles.cshtml
@@ -64,7 +64,7 @@
                                 }
                                 else
                                 {
-                                    <a><button type="button" disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>
+                                    <button type="button" disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button>
                                 }
                             </div>
                         </div>
