--- a/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/tareas/listado.cshtml
@@ -74,7 +74,7 @@
                                 }
                                 else
                                 {
-                                    <a><button type="button" disabled class="btn btn-warning waves-effect waves-light float-xl-right float-lg-right float-md-left">Crear nueva tarea</button></a>
+                                    <button type="button" disabled class="btn btn-warning waves-effect waves-light float-xl-right float-lg-right float-md-left">Crear nueva tarea</button>
                                 }
 
                             </div>
