correccion en mensajes privados y listado de titulares webmaster

--- a/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
@@ -59,7 +59,7 @@
                             </div>
                             <div class="col-md-6 mb-1">
 
-                                @if (Session["CURRENT_COMU"] != null)
+                                @if (Model.communityList.Count > 0)
                                 {
                                 <a href="@Url.Action("agregar", "titulares", new { area = "webmaster" })">
                                     <button type="button"
@@ -79,7 +79,7 @@
                                 }
                                 
 
-                                @if (Model.titularList.Count > 0)
+                                @if (Model.communityList.Count > 0)
                                 {
                                     <button class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1"
                                             type="button" id="import_csv_btn">
@@ -94,7 +94,7 @@
                                     </button>
                                 }
 
-                                @if (Session["CURRENT_COMU"] != null)
+                                @if (Model.titularList.Count > 0)
                                 {
                                     <a href="#" onclick="onExportCSV()"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">Exportar</button></a>
                                 }
